src/styles/main.css
/* ... */
.btn-setting{--un-bg-opacity:1;background-color:rgba(165,180,252,var(--un-bg-opacity));--un-text-opacity:1;color:rgba(0,0,0,var(--un-text-opacity));}
.btn-twitch{display:inline-block;--un-bg-opacity:1;background-color:rgba(124,58,237,var(--un-bg-opacity));--un-text-opacity:1;color:rgba(245,245,245,var(--un-text-opacity));}
.title-setting{font-size:1.25rem;line-height:1.75rem;--un-text-opacity:1;color:rgba(163,163,163,var(--un-text-opacity));}

.stack { display: flex; flex-direction: column; justify-content: flex-start; }
.stack > template + *,
.stack > * {
  margin-top: 0;
  margin-bottom: 0;
}

.stack > * + * { margin-top: var(--space, 1.5rem); }
    
.stack-4 { --space: 1rem; }
.stack-0 { --space: 0rem; }
.stack-2 { --space: 0.5rem; }

.l-grid {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 100%;
}
@supports (width: min(var(--grid-min), 100%)) {
  .l-grid { grid-template-columns: repeat(auto-fill, minmax(min(var(--grid-min), 100%), 1fr)); }
}
    
.l-grid-min-w-72 { --grid-min: 18rem }
.l-grid-min-w-64 { --grid-min: 16rem }

.line-clamp-2 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
}
  
.sidebar-button{padding-left:0.75rem;padding-right:0.75rem;padding-top:0.375rem;padding-bottom:0.125rem;margin-right:1rem;display:block;--un-bg-opacity:1;background-color:rgba(24,24,27,var(--un-bg-opacity));border-bottom-width:5px;border-style:solid;--un-border-opacity:1;border-color:rgba(24,24,27,var(--un-border-opacity));--un-text-opacity:1;color:rgba(228,228,231,var(--un-text-opacity));height:100%;}
.sidebar-button:hover{--un-border-opacity:1;border-color:rgba(113,113,122,var(--un-border-opacity));--un-text-opacity:1;color:rgba(250,250,250,var(--un-text-opacity));}
.sidebar-button:focus{--un-border-opacity:1;border-color:rgba(113,113,122,var(--un-border-opacity));--un-text-opacity:1;color:rgba(250,250,250,var(--un-text-opacity));}
.sidebar-button[aria-expanded="true"] {--un-border-opacity:1;border-color:rgba(109,40,217,var(--un-border-opacity));}
.sidebar-wrapper{padding-top:2.75rem;padding-bottom:0.5rem;position:absolute;width:100%;height:100vh;max-width:20rem;top:0rem;left:100%;--un-rotate:0;--un-scale-x:1;--un-scale-y:1;--un-scale-z:1;--un-skew-x:0;--un-skew-y:0;--un-translate-x:0;--un-translate-y:0;--un-translate-z:0;transform:rotate(var(--un-rotate)) scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y)) scaleZ(var(--un-scale-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y)) translateX(var(--un-translate-x)) translateY(var(--un-translate-y)) translateZ(var(--un-translate-z));transition: visibility 150ms, opacity 150ms, transform 150ms;z-index:-10}
[aria-expanded="false"] ~ .sidebar-wrapper{opacity:0;visibility:hidden;--un-translate-x:0rem;}
[aria-expanded="true"] ~ .sidebar-wrapper{opacity:1;visibility:visible;;--un-translate-x:-100%;}

.filter-checkbox-btn{padding:0.25rem;border-right-width:2px;border-style:solid;--un-border-opacity:1;border-color:rgba(250,250,250,var(--un-border-opacity));}
.filter-checkbox-btn.archive.checked > span{--un-bg-opacity:1;background-color:rgba(190,242,100,var(--un-bg-opacity));}
.filter-checkbox-btn.upload.checked > span{--un-bg-opacity:1;background-color:rgba(125,211,252,var(--un-bg-opacity));}
.filter-checkbox-btn.highlight.checked > span{--un-bg-opacity:1;background-color:rgba(252,211,77,var(--un-bg-opacity));}

/* layer: default */
.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border-width:0;}
.p-0\.5{padding:0.125rem;}
.p-3{padding:0.75rem;}
.p1{padding:0.25rem;}
.p-2,.p2{padding:0.5rem;}
.px-0\.5{padding-left:0.125rem;padding-right:0.125rem;}
.px-1{padding-left:0.25rem;padding-right:0.25rem;}
.px-1\.5{padding-left:0.375rem;padding-right:0.375rem;}
.px-2{padding-left:0.5rem;padding-right:0.5rem;}
.px-2\.5{padding-left:0.625rem;padding-right:0.625rem;}
.px-3{padding-left:0.75rem;padding-right:0.75rem;}
.py-1{padding-top:0.25rem;padding-bottom:0.25rem;}
.py-1\.5{padding-top:0.375rem;padding-bottom:0.375rem;}
.py-2{padding-top:0.5rem;padding-bottom:0.5rem;}
.pb-0\.5{padding-bottom:0.125rem;}
.pb-1{padding-bottom:0.25rem;}
.pb-3{padding-bottom:0.75rem;}
.pb-4{padding-bottom:1rem;}
.pl-1\.5{padding-left:0.375rem;}
.pl-3{padding-left:0.75rem;}
.pl-4{padding-left:1rem;}
.pr-2{padding-right:0.5rem;}
.pr-3{padding-right:0.75rem;}
.pt-1{padding-top:0.25rem;}
.pt-1\.5{padding-top:0.375rem;}
.pt-14{padding-top:3.5rem;}
.pt-2{padding-top:0.5rem;}
.pt-4{padding-top:1rem;}
.mx-2{margin-left:0.5rem;margin-right:0.5rem;}
.mx-auto{margin-left:auto;margin-right:auto;}
.my-12{margin-top:3rem;margin-bottom:3rem;}
.mb-0\.5{margin-bottom:0.125rem;}
.mb-1{margin-bottom:0.25rem;}
.mb-1\.5{margin-bottom:0.375rem;}
.mb-4{margin-bottom:1rem;}
.mb-auto{margin-bottom:auto;}
.ml-1{margin-left:0.25rem;}
.ml-1\.5{margin-left:0.375rem;}
.ml-2{margin-left:0.5rem;}
.ml-3{margin-left:0.75rem;}
.ml-4{margin-left:1rem;}
.ml-6{margin-left:1.5rem;}
.mr-0{margin-right:0rem;}
.mr-1\.5{margin-right:0.375rem;}
.mr-2{margin-right:0.5rem;}
.mr-3{margin-right:0.75rem;}
.mt-1\.5{margin-top:0.375rem;}
.mt-4{margin-top:1rem;}
.mt-6{margin-top:1.5rem;}
.block{display:block;}
.inline-block{display:inline-block;}
.hidden{display:none;}
.focus\:opacity-100:focus,.hover\:opacity-100:hover{opacity:1;}
.opacity-60{opacity:0.6;}
.opacity-70{opacity:0.7;}
.opacity-90{opacity:0.9;}
.bg-amber-200{--un-bg-opacity:1;background-color:rgba(253,230,138,var(--un-bg-opacity));}
.bg-emerald-400{--un-bg-opacity:1;background-color:rgba(52,211,153,var(--un-bg-opacity));}
.bg-gray-200{--un-bg-opacity:1;background-color:rgba(228,228,231,var(--un-bg-opacity));}
.bg-gray-700{--un-bg-opacity:1;background-color:rgba(63,63,70,var(--un-bg-opacity));}
.bg-gray-800{--un-bg-opacity:1;background-color:rgba(39,39,42,var(--un-bg-opacity));}
.bg-gray-900{--un-bg-opacity:1;background-color:rgba(24,24,27,var(--un-bg-opacity));}
/* ... */

